--- a/covid-19.html
+++ b/covid-19.html
@@ -105,7 +105,7 @@ permalink: /covid-19.html
             <h2 id="hp-sars-cov-2-ce">Human proteins used by SARS-CoV-2 to enter human cells</h2>
             The virus has been shown to require two human proteins (<a href="http://amigo.geneontology.org/amigo/gene_product/UniProtKB:Q9BYF1" target="_blank">ACE2</a>, <a href="http://amigo.geneontology.org/amigo/gene_product/UniProtKB:O15393" target="_blank">TMPRSS2</a>) for cell entry<sup><a href="#references">1,2</a></sup>.
             These are the same proteins used by <a href="https://www.ncbi.nlm.nih.gov/pubmed/21068237" target="blank">SARS-CoV<sup>4</sup></a>, the cause of the 2002-2004 SARS epidemic.
-            <div id="ribbon-covid-cell-entry" style="padding-top: 55px; padding-bottom: 30px; overflow-x: auto;"></div>
+            <div id="ribbon-covid-cell-entry" style="padding-top: 55px; padding-bottom: 30px; overflow-x: auto; width: 1400px;"></div>
 
             <table style="width:100%">
                 <tr>
