--- a/covid-19.html
+++ b/covid-19.html
@@ -132,7 +132,7 @@ permalink: /covid-19.html
 
             <br><br>
             <b>SARS-CoV-2 gene</b>: <select id="selected-covid-gene" onchange="changeCOVID()"></select>
-            <div id="ribbon-covid-gene" style="padding-top: 55px; padding-bottom: 30px; overflow-x: auto;"></div>
+            <div id="ribbon-covid-gene" style="padding-top: 55px; padding-bottom: 30px; overflow-x: auto; width: 1400px;"></div>
 
 
             <table style="width:100%"><tr>
