--- a/covid-19.html
+++ b/covid-19.html
@@ -50,13 +50,10 @@ permalink: /covid-19.html
     </style>
 
     <script src="js/covid.js"></script>
-    <script src="https://unpkg.com/@geneontology/wc-ribbon-strips/dist/wc-ribbon-strips.js"/>
-    <script src="wc-ribbon-table.js"></script>
-    
+    <script type="module" src="https://unpkg.com/@geneontology/wc-ribbon-strips/dist/wc-ribbon-strips/wc-ribbon-strips.esm.js"></script>
+    <script nomodule="" src="https://unpkg.com/@geneontology/wc-ribbon-strips/dist/wc-ribbon-strips/wc-ribbon-strips.js"></script>
 
 </head>
-
-
 
 
     <div class="container" style="width:95%">
