--- a/covid-19.html
+++ b/covid-19.html
@@ -26,6 +26,18 @@ permalink: /covid-19.html
             margin: 20px 0px;
         }
 
+        .banner__warning {
+            display: inline-block;
+            text-align: left;
+            width: 15%;
+        }
+
+        .banner__disclaimer {
+            display: inline-block;
+            text-align: start;
+            width: 80%;            
+        }
+
         .ribbon__category--cell, .ribbon__subject--cell, .ribbon__subject--cell--no-annotation, .ribbon__subject__label--link, tr, th, td {
             font-size: 14px !important;
             line-height: 1.0 !important;
@@ -47,6 +59,8 @@ permalink: /covid-19.html
             margin-left: 30px;            
         }
         
+        
+
     </style>
 
     <script src="js/covid.js"></script>
@@ -62,12 +76,8 @@ permalink: /covid-19.html
         <h1>SARS-CoV-2 - Coronavirus</h1>
 
         <div class="banner">
-            <i class="fa fa-3x fa-exclamation-triangle" style="display: inline-block;
-            text-align: left;
-            width: 15%;"></i>
-            <span style="display: inline-block;
-            text-align: start;
-            width: 80%;">
+            <i class="fa fa-3x fa-exclamation-triangle banner__warning"></i>
+            <span class="banner__disclaimer">
                 This is a work in progress and users should expect the data provided here to be updated as new scientific evidence accumulates.
                 <br>Last Update: April 7th, 2020
             </span>
