Covid styling update

--- a/covid-19.html
+++ b/covid-19.html
@@ -7,7 +7,7 @@ permalink: /covid-19.html
     *, *::after, *::before {
         box-sizing: border-box;
         font-family: "Lato", sans-serif;
-        font-weight: 400 !important;
+        font-weight: 400;
         outline: none;
     }
 
@@ -33,7 +33,7 @@ permalink: /covid-19.html
     }
 
     .ribbon__category--cell, .ribbon__subject--cell, .ribbon__subject--cell--no-annotation, .ribbon__subject__label--link, tr, th, td {
-        font-size: 14px !important;
+        /* font-size: 14px !important; */
         line-height: 1.0 !important;
     }
 
