Change remaining pantherdb links to HTTPS for geneontology/go-site#53

--- a/covid-19.html
+++ b/covid-19.html
@@ -140,7 +140,7 @@ permalink: /covid-19.html
                     </div>
 
                             
-                <form action="http://pantherdb.org/webservices/go/overrep.jsp" class="form-inline" role="form" method="POST" target="_blank" style="display: inline-block">
+                <form action="https://pantherdb.org/webservices/go/overrep.jsp" class="form-inline" role="form" method="POST" target="_blank" style="display: inline-block">
                     <input name="correction" value="fdr" type="hidden">
                     <input name="format" value="html" type="hidden">
                     <input name="resource" value="PANTHER" type="hidden">
@@ -168,7 +168,7 @@ permalink: /covid-19.html
                 </form>
 
 
-                <form action="http://pantherdb.org/webservices/go/overrep.jsp" class="form-inline" role="form" method="POST" target="_blank" style="display: inline-block">
+                <form action="https://pantherdb.org/webservices/go/overrep.jsp" class="form-inline" role="form" method="POST" target="_blank" style="display: inline-block">
                     <input name="correction" value="fdr" type="hidden">
                     <input name="format" value="html" type="hidden">
                     <input name="resource" value="PANTHER" type="hidden">
@@ -196,7 +196,7 @@ permalink: /covid-19.html
                 </form>
 
 
-                <form action="http://pantherdb.org/webservices/go/overrep.jsp" class="form-inline" role="form" method="POST" target="_blank" style="display: inline-block">
+                <form action="https://pantherdb.org/webservices/go/overrep.jsp" class="form-inline" role="form" method="POST" target="_blank" style="display: inline-block">
                     <input name="correction" value="fdr" type="hidden">
                     <input name="format" value="html" type="hidden">
                     <input name="resource" value="PANTHER" type="hidden">
@@ -233,7 +233,7 @@ permalink: /covid-19.html
             This analysis shows the human biological functions that may be preferentially targeted by the SARS-CoV-2 virus.</p>
         
         <div>
-            <form action="http://pantherdb.org/webservices/go/overrep.jsp" class="form-inline" role="form" method="POST" target="_blank" style="display: inline-block">
+            <form action="https://pantherdb.org/webservices/go/overrep.jsp" class="form-inline" role="form" method="POST" target="_blank" style="display: inline-block">
                 <input name="correction" value="fdr" type="hidden">
                 <input name="format" value="html" type="hidden">
                 <input name="resource" value="PANTHER" type="hidden">
@@ -261,7 +261,7 @@ permalink: /covid-19.html
             </form>
 
 
-            <form action="http://pantherdb.org/webservices/go/overrep.jsp" class="form-inline" role="form" method="POST" target="_blank" style="display: inline-block">
+            <form action="https://pantherdb.org/webservices/go/overrep.jsp" class="form-inline" role="form" method="POST" target="_blank" style="display: inline-block">
                 <input name="correction" value="fdr" type="hidden">
                 <input name="format" value="html" type="hidden">
                 <input name="resource" value="PANTHER" type="hidden">
@@ -289,7 +289,7 @@ permalink: /covid-19.html
             </form>
 
 
-            <form action="http://pantherdb.org/webservices/go/overrep.jsp" class="form-inline" role="form" method="POST" target="_blank" style="display: inline-block">
+            <form action="https://pantherdb.org/webservices/go/overrep.jsp" class="form-inline" role="form" method="POST" target="_blank" style="display: inline-block">
                 <input name="correction" value="fdr" type="hidden">
                 <input name="format" value="html" type="hidden">
                 <input name="resource" value="PANTHER" type="hidden">
