--- a/covid-19.html
+++ b/covid-19.html
@@ -4,13 +4,6 @@ permalink: /covid-19.html
 ---
 
 <style>
-    *, *::after, *::before {
-        box-sizing: border-box;
-        font-family: "Lato", sans-serif;
-        font-weight: 400;
-        outline: none;
-    }
-
     .banner {
         background-color: red;
         color: white;
@@ -161,7 +154,7 @@ permalink: /covid-19.html
 
                         <span class="input-group-btn">
                             <button type="submit" class="btn btn-primary u-no-transform u-anim-move-right" style="border-color: #22612C; margin-left: 4px; background: linear-gradient(150deg,#00158c,rgba(16,122,222,.5) 100%); padding: 5px 10px; border-radius: 15px" title="Find biological processes over/under represented for that gene set">
-                                GO Processes <i class="fa fa-chevron-right u-line-height-single"></i>
+                                GO Processes <i class="fa-solid fa-chevron-right u-line-height-single"></i>
                             </button>
                         </span>
                     </div>
@@ -189,7 +182,7 @@ permalink: /covid-19.html
 
                         <span class="input-group-btn">
                             <button type="submit" class="btn btn-primary u-no-transform u-anim-move-right" style="border-color: #22612C; margin-left: 4px; background: linear-gradient(150deg,#ca113b,rgba(189,50,80,.5) 100%); padding: 5px 10px; border-radius: 15px" title="Find molecular functions over/under represented for that gene set">
-                                GO Functions <i class="fa fa-chevron-right u-line-height-single"></i>
+                                GO Functions <i class="fa-solid fa-chevron-right u-line-height-single"></i>
                             </button>
                         </span>
                     </div>
@@ -217,7 +210,7 @@ permalink: /covid-19.html
 
                         <span class="input-group-btn">
                             <button type="submit" class="btn btn-primary u-no-transform u-anim-move-right" style="border-color: #22612C; margin-left: 4px; background: linear-gradient(150deg,#dab61a,rgba(253,253,131,.5) 100%);  padding: 5px 10px; border-radius: 15px; color: black" title="Find cellular components over/under represented for that gene set">
-                                GO Components <i class="fa fa-chevron-right u-line-height-single"></i>
+                                GO Components <i class="fa-solid fa-chevron-right u-line-height-single"></i>
                             </button>
                         </span>
                     </div>
@@ -254,7 +247,7 @@ permalink: /covid-19.html
 
                     <span class="input-group-btn">
                         <button type="submit" class="btn btn-primary u-no-transform u-anim-move-right" style="border-color: #22612C; margin-left: 4px; background: linear-gradient(150deg,#00158c,rgba(16,122,222,.5) 100%); padding: 5px 10px; border-radius: 15px" title="Find biological processes over/under represented for that gene set">
-                            GO Processes <i class="fa fa-chevron-right u-line-height-single"></i>
+                            GO Processes <i class="fa-solid fa-chevron-right u-line-height-single"></i>
                         </button>
                     </span>
                 </div>
@@ -282,7 +275,7 @@ permalink: /covid-19.html
 
                     <span class="input-group-btn">
                         <button type="submit" class="btn btn-primary u-no-transform u-anim-move-right" style="border-color: #22612C; margin-left: 4px; background: linear-gradient(150deg,#ca113b,rgba(189,50,80,.5) 100%); padding: 5px 10px; border-radius: 15px" title="Find molecular functions over/under represented for that gene set">
-                            GO Functions <i class="fa fa-chevron-right u-line-height-single"></i>
+                            GO Functions <i class="fa-solid fa-chevron-right u-line-height-single"></i>
                         </button>
                     </span>
                 </div>
@@ -310,7 +303,7 @@ permalink: /covid-19.html
 
                     <span class="input-group-btn">
                         <button type="submit" class="btn btn-primary u-no-transform u-anim-move-right" style="border-color: #22612C; margin-left: 4px; background: linear-gradient(150deg,#dab61a,rgba(253,253,131,.5) 100%);  padding: 5px 10px; border-radius: 15px; color: black" title="Find cellular components over/under represented for that gene set">
-                            GO Components <i class="fa fa-chevron-right u-line-height-single"></i>
+                            GO Components <i class="fa-solid fa-chevron-right u-line-height-single"></i>
                         </button>
                     </span>
                 </div>
